macros/tests/trybuild/use.rs
use serde_args_macros::help;

#[help]
use std::vec;

fn main() {}
